k8s_manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-py
  namespace: vault-py
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vault-py
  template:
    metadata:
      annotations: {}
      labels:
        app: vault-py
    spec:
      volumes:
        - name: vault-py-tls
          secret:
            secretName: vault-py-tls
            items:
              - key: ca.crt
                path: ca.crt
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
      serviceAccount: vault-py
      serviceAccountName: vault-py
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
      containers:
        - image: vault_py
          imagePullPolicy: IfNotPresent
          name: vault-py
          volumeMounts:
            - name: vault-py-tls
              readOnly: true
              mountPath: "/vault_py/tls/"
          command:
            [
              "uvicorn",
              "restful:app",
              "--host",
              "0.0.0.0",
              "--ssl-ca-certs",
              "/vault_py/tls/ca.crt",
              "--ssl-certfile",
              "/vault_py/tls/tls.crt",
              "--ssl-keyfile",
              "/vault_py/tls/tls.key",
              "--log-level",
              "warning",
            ]
          ports:
            - containerPort: 8000
          resources: {}
