k8s_manifests/base/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "vaultpy"
  annotations:
    cert-manager.io/inject-ca-from: vault-py/vault-py-ca
webhooks:
  - name: "vaultpy.vault-py.svc"
    namespaceSelector:
      matchExpressions:
        - key: vaultpy.io/admission-webhooks
          operator: In
          values:
            - enabled
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - cert-manager
    objectSelector:
      matchExpressions:
        - key: app
          operator: NotIn
          values:
            - vault-py
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: "vault-py"
        name: "vault-py"
        port: 8000
        path: "/mutate"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Ignore
